RESOLVED FIXED95862
[WK2] Crash in WebPageProxy::showPopupMenu if PageClient does not implement createPopupMenuProxy
https://bugs.webkit.org/show_bug.cgi?id=95862
Summary [WK2] Crash in WebPageProxy::showPopupMenu if PageClient does not implement c...
Balazs Kelemen
Reported 2012-09-05 09:25:01 PDT
Another typo revealed when working with QRawWebView.
Attachments
Patch (1.46 KB, patch)
2012-09-05 09:26 PDT, Balazs Kelemen
no flags
Balazs Kelemen
Comment 1 2012-09-05 09:26:33 PDT
WebKit Review Bot
Comment 2 2012-09-06 08:54:30 PDT
Comment on attachment 162266 [details] Patch Clearing flags on attachment: 162266 Committed r127745: <http://trac.webkit.org/changeset/127745>
WebKit Review Bot
Comment 3 2012-09-06 08:54:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.