[WK2] Crash in WebPageProxy::showPopupMenu if PageClient does not implement createPopupMenuProxy https://bugs.webkit.org/show_bug.cgi?id=95862

Reviewed by Simon Hausmann.

Bail out early if the PageClient does not create a PopupMenuProxy for us.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::showPopupMenu):


Canonical link: https://commits.webkit.org/113847@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127745 268f45cc-cd09-0410-ab3c-d52691b4dbfc